k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devedu
  labels:
    app.kubernetes.io/part-of: devedu
